--- a/.github/workflows/build-windows-x64.yml
+++ b/.github/workflows/build-windows-x64.yml
@@ -24,6 +24,6 @@ jobs:
         mv target/x86_64-pc-windows-msvc/release/atuin.exe artifacts/atuin_x64.exe   
     - uses: actions/upload-artifact@v4
       with:
-        name: windows-binaries-x64
+        name: atuin-x64
         path: |
           artifacts/atuin_x64.exe
